--- a/groundfloor.html
+++ b/groundfloor.html
@@ -36,7 +36,7 @@
 }
 
 
-.logo img{
+.logoo img{
 
     width: 50px;
     height: 50px;
@@ -179,7 +179,7 @@ p b{
 </head>
 <body>
     <header>
-        <div class="logo"> <img src="logo.jpg" alt="Website-logo"> </div>
+        <div class="logoo"> <img src="logo.jpg" alt="Website-logo"> </div>
         <div class="site-name">School Museum Erbil</div>
     </header>
 
